Dev_mythip@capgemini.com_17Dec_ForGitSync/src/objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bonus_Amount__c</fullName>
        <label>Bonus Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HR Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <externalId>true</externalId>
        <label>Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salary1__c</fullName>
        <label>Salary1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Satus_Of_Approval__c</fullName>
        <label>Status Of Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <label>Skills</label>
        <picklist>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C++</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isBonusApplicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isBonusApplicable</label>
        <type>Checkbox</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Salary1__c</columns>
        <columns>Bonus_Amount__c</columns>
        <columns>Id__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Employee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>Needs_Discount__c</fullName>
        <label>Needs Discount</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Sharing_Workload__c</fullName>
        <label>Sharing Workload</label>
    </sharingReasons>
    <validationRules>
        <fullName>BonusAmount_Mandatory</fullName>
        <active>false</active>
        <errorConditionFormula>AND(isBonusApplicable__c ==TRUE,  ISNULL(Bonus_Amount__c ) )</errorConditionFormula>
        <errorDisplayField>Bonus_Amount__c</errorDisplayField>
        <errorMessage>Please enter Bonus Amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Skills_Mandatory</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISNEW() ,
ISPICKVAL( Skills__c , &apos;&apos;))</errorConditionFormula>
        <errorMessage>Sills Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Skills_Updation_NotAllowed</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
OR(
ISPICKVAL(PRIORVALUE( Skills__c),&apos;Java&apos;),
ISPICKVAL(PRIORVALUE( Skills__c),&apos;C++&apos;)),
ISPICKVAL( Skills__c , &apos;C&apos;) ,
NOT(ISNEW())
)</errorConditionFormula>
        <errorMessage>Cannot Change skills to C.</errorMessage>
    </validationRules>
</CustomObject>